fix duplicate props